# yangvar6.website

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  expanded.rs  index.html  proj_build_release.sh  proj_release_online.sh  proj_run.sh  tailwind.config.js
.cargo/: config.toml
assets/: maze_shader.frag  maze_shader.vert
src/: circles.rs  circles_styles.css  consts.rs  glsl.rs  main.rs  styles.css
style/: input.css  output.css
