[package]
name = "yangvar6dotcom"
version = "0.1.0"
edition = "2024"


[dependencies]
leptos = { version = "0.8.10", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "Window",
    "HtmlCanvasElement",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
thaw = { version = "0.4.8", features = ["csr"] }


[profile.release]
opt-level = "s"
