[package]
name = "yangvar6dotcom"
version = "0.1.0"
edition = "2024"


[dependencies]
leptos = { version = "0.8.10", features = ["csr", "nightly"] }
leptos_router = { version = "0.8.9", features = ["nightly"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "Window",
    "HtmlCanvasElement",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
chrono = "0.4.42"
wee_alloc = "0.4.5"


# [[workspace.metadata.leptos]]
# name = "yangvar6.com"
# # bin-package = "server"
# lib-package = "yangvar6dotcom"


[profile.release]
opt-level = "s"          # Aggressive size optimization ('s' is less aggressive but sometimes smaller; test both)
lto = true               # Enable link-time optimization for inlining and dead code elimination
codegen-units = 1        # Single codegen unit for better optimization (slower compile, smaller binary)
panic = "abort"          # Abort on panic instead of unwinding (removes unwind code; requires nightly for full effect)
strip = true             # Strip symbols from the binary
debug = false            # No debug info
